...
                  emailAnimation.onBlur();
                }}
                keyboardType="email-address"
                autoCapitalize="none"
                autoCorrect={false}
                editable={!loading}
                testID="login-email-input"
              />

              <AuthInput
                label={t('auth.login.password')}
                icon="lock-closed-outline"
                isFocused={passwordFocused}
...
